fixing deployment rules

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <h1>Messsage Generator</h1>  
               </div>
               <div class="card">
-                <p>Your message will be shown here</p>
+                <p>Your message will be shown here in miltiple lines!</p>
               </div>
               <div class="bottom">
                 <button class="cta">
