--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
                 <p>Your message will be shown here in miltiple lines!</p>
               </div>
               <div class="bottom">
-                <button class="cta">
+                <button type="button"
+                    onclick="newQuote();"
+                    title="Get a random quote" 
+                    class="cta">
                   New Message
                 </button>
               </div>
