push and sync understood now + button is clickable now

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                     class="cta">
                   New Message
                 </button>
+                <button class="cta">Click</button>
               </div>
            </div>
      </section>
