vh fixed and script works

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <h1>Messsage Generator</h1>  
               </div>
               <div class="card">
-                <p>Your message will be shown here in miltiple lines!</p>
+                <p id="quote">Your message will be shown here in multiple lines!</p>
               </div>
               <div class="bottom">
                 <button type="button"
